# sorting-visualizer

./: .dockerignore  Cargo.toml  Dockerfile  Readme.md  deploy.sh  index.html  nginx.conf
.github/workflows/: test_animations.yml
src/: lib.rs  merge_sort.rs  quick_sort.rs
ui/: package-lock.json  package.json  vite.config.js
ui/src/: App.css  App.tsx  MergeSort.css  MergeSort.tsx  index.tsx  tupleThatShit.ts
