[package]
name = "sorting-visualizer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
wasm-bindgen = "0.2.82"
js-sys = "0.3.59"
getrandom = { version = "*", features = ["js"] }
serde_json = "1.0.82"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
